--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 h1{
   font-size: 50px;
-  font-style: italic;
+  font-family: 'Bad Script' , cursive;
   margin: 50px;
   border-bottom: 5px solid;
   text-align: center;
@@ -95,8 +95,8 @@ width: 70%;
 
 .earingstext {
   text-align: center;
+  line-height: 200%;
 }
-
 
 
 .readingtext {
@@ -155,4 +155,16 @@ width: 70%;
 
 .quotetext {
   justify-content: center;
+}
+
+@media (max-width: 600px) {
+  .container {
+    flex-direction: column;
+  }
+  .container2 {
+    flex-direction: column;
+  }
+  .box {
+    width: 100%;
+  }
 }
