--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ img {
 }
 
 .travelclass img {
-  width: 500px;
+  width: 494px;
 }
 
 .fashionclass img {
@@ -39,7 +39,7 @@ img {
 .containerfashion {
  display: flex;
  justify-content: center;
- align-items:
+ margin: 10px;
 }
 
 .travelclass {
@@ -49,7 +49,7 @@ img {
 .containertravel{
   display: flex;
   justify-content: center;
-  align-items:
+  margin: 10px;
 }
 
 .texttravel {
@@ -78,7 +78,6 @@ background-color: #ffe6e6;
   justify-content: center;
   width: 100%;
 }
-
 
 .foodtext {
   text-align: center;
